Fix wrapping of marketing boxes on mobile

--- a/scss/wwu2019/marketingboxes.scss
+++ b/scss/wwu2019/marketingboxes.scss
@@ -26,22 +26,17 @@
     padding: 0;
 }
 
+#region-marketing > div {
+    gap: 10px;
+}
+
 #region-marketing .block.card {
     padding: 0;
 }
 
 #region-marketing .block.card {
     padding: 0;
-    margin-left: 5px;
-    margin-right: 5px;
     flex: 1 1 calc(33.333% - 40px);
-    &:first-child {
-        margin-left: 0;
-    }
-
-    &:last-child {
-        margin-right: 0;
-    }
 }
 
 @media (max-width: $onecolumn-break-point) {
